@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Display column names that contain a dot correctly in information schema
+   and result column headers
+
  - Fixed an issue that could kill long running queries on shards with few
    segments containing huge amounts of documents
 
